--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,9 +3,11 @@
 /* Importaciones */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Fira+Code:wght@400;700&family=Poppins:wght@400;700&display=swap");
 @import "./styles/variables.css";
+@import "./styles/Spinner.css";
 @import "./styles/reset.css";
 @import "./styles/utilities.css";
 @import "./App.css";
+@import "./styles/admin.css";
 @import "./components/homepage/HomePage.css";
 @import "./styles/StateFeedback.css";
 @import "./components/contact/ContactForm.css";
